_generated-doc/2.13/config/quarkus-test-dev-testing-test-config.adoc

:summaryTableId: quarkus-test-dev-testing-test-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-test-dev-testing-test-config_configuration]]link:#quarkus-test-dev-testing-test-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.continuous-testing]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.continuous-testing[quarkus.test.continuous-testing]`

[.description]
--
If continuous testing is enabled. The default value is 'paused', which will allow you to start testing from the console or the Dev UI, but will not run tests on startup. If this is set to 'enabled' then testing will start as soon as the application has started. If this is 'disabled' then continuous testing is not enabled, and can't be enabled without restarting the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTINUOUS_TESTING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTINUOUS_TESTING+++`
endif::add-copy-button-to-env-var[]
-- a|
`paused`, `enabled`, `disabled` 
|`paused`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.display-test-output]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.display-test-output[quarkus.test.display-test-output]`

[.description]
--
If output from the running tests should be displayed in the console.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_DISPLAY_TEST_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_DISPLAY_TEST_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.include-tags]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.include-tags[quarkus.test.include-tags]`

[.description]
--
Tags that should be included for continuous testing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_TAGS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.exclude-tags]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.exclude-tags[quarkus.test.exclude-tags]`

[.description]
--
Tags that should be excluded by default with continuous testing. This is ignored if include-tags has been set. Defaults to 'slow'

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_TAGS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`slow`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.include-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.include-pattern[quarkus.test.include-pattern]`

[.description]
--
Tests that should be included for continuous testing. This is a regular expression and is matched against the test class name (not the file name).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.exclude-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.exclude-pattern[quarkus.test.exclude-pattern]`

[.description]
--
Tests that should be excluded with continuous testing. This is a regular expression and is matched against the test class name (not the file name). This is ignored if include-pattern has been set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|`.*\.IT[^.]+\|.*IT\|.*ITCase`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.include-engines]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.include-engines[quarkus.test.include-engines]`

[.description]
--
Test engine ids that should be included for continuous testing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_ENGINES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_ENGINES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.exclude-engines]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.exclude-engines[quarkus.test.exclude-engines]`

[.description]
--
Test engine ids that should be excluded by default with continuous testing. This is ignored if include-engines has been set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_ENGINES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_ENGINES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.flat-class-path]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.flat-class-path[quarkus.test.flat-class-path]`

[.description]
--
Changes tests to use the 'flat' ClassPath used in Quarkus 1.x versions. This means all Quarkus and test classes are loaded in the same ClassLoader, however it means you cannot use continuous testing. Note that if you find this necessary for your application then you may also have problems running in development mode, which cannot use a flat class path.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_FLAT_CLASS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_FLAT_CLASS_PATH+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.native-image-profile]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.native-image-profile[quarkus.test.native-image-profile]`

[.description]
--
The profile to use when testing the native image

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_NATIVE_IMAGE_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_NATIVE_IMAGE_PROFILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`prod`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.profile]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.profile[quarkus.test.profile]`

[.description]
--
The profile (dev, test or prod) to use when testing using @QuarkusTest

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_PROFILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`test`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.profile.tags]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.profile.tags[quarkus.test.profile.tags]`

[.description]
--
The tags this profile is associated with. When the `quarkus.test.profile.tags` System property is set (its value is a comma separated list of strings) then Quarkus will only execute tests that are annotated with a `@TestProfile` that has at least one of the supplied (via the aforementioned system property) tags.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_PROFILE_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_PROFILE_TAGS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.container.network]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.container.network[quarkus.test.container.network]`

[.description]
--
Controls the container network to be used when @QuarkusIntegration needs to launch the application in a container. This setting only applies if Quarkus does not need to use a shared network - which is the case if DevServices are used when running the test.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTAINER_NETWORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTAINER_NETWORK+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.arg-line]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.arg-line[quarkus.test.arg-line]`

[.description]
--
Additional launch parameters to be used when Quarkus launches the produced artifact for `@QuarkusIntegrationTest` When the artifact is a `jar`, this string is passed right after the `java` command. When the artifact is a `container`, this string is passed right after the `docker run` command. When the artifact is a `native binary`, this string is passed right after the native binary name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_ARG_LINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_ARG_LINE+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.wait-time]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.wait-time[quarkus.test.wait-time]`

[.description]
--
Used in `@QuarkusIntegrationTest` and `NativeImageTest` to determine how long the test will wait for the application to launch

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_WAIT_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_WAIT_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT1M`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.hang-detection-timeout]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.hang-detection-timeout[quarkus.test.hang-detection-timeout]`

[.description]
--
Configures the hang detection in @QuarkusTest. If no activity happens (i.e. no test callbacks are called) over this period then QuarkusTest will dump all threads stack traces, to help diagnose a potential hang. Note that the initial timeout (before Quarkus has started) will only apply if provided by a system property, as it is not possible to read all config sources until Quarkus has booted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_HANG_DETECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_HANG_DETECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10M`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.type]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.type[quarkus.test.type]`

[.description]
--
The type of test to run, this can be either: quarkus-test: Only runs `@QuarkusTest` annotated test classes unit: Only runs classes that are not annotated with `@QuarkusTest` all: Runs both, running the unit tests first

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`unit`, `quarkus-test`, `all` 
|`all`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.class-clone-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.class-clone-pattern[quarkus.test.class-clone-pattern]`

[.description]
--
If a class matches this pattern then it will be cloned into the Quarkus ClassLoader even if it is in a parent first artifact. This is important for collections which can contain objects from the Quarkus ClassLoader, but for most parent first classes it will just cause problems.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CLASS_CLONE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CLASS_CLONE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|`java\..*`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.only-test-application-module]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.only-test-application-module[quarkus.test.only-test-application-module]`

[.description]
--
If this is true then only the tests from the main application module will be run (i.e. the module that is currently running mvn quarkus:dev). If this is false then tests from all dependency modules will be run as well.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_ONLY_TEST_APPLICATION_MODULE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_ONLY_TEST_APPLICATION_MODULE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.include-module-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.include-module-pattern[quarkus.test.include-module-pattern]`

[.description]
--
Modules that should be included for continuous testing. This is a regular expression and is matched against the module groupId:artifactId.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_MODULE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_MODULE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.exclude-module-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.exclude-module-pattern[quarkus.test.exclude-module-pattern]`

[.description]
--
Modules that should be excluded for continuous testing. This is a regular expression and is matched against the module groupId:artifactId. This is ignored if include-module-pattern has been set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_MODULE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_MODULE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.container.additional-exposed-ports-additional-exposed-ports]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.container.additional-exposed-ports-additional-exposed-ports[quarkus.test.container.additional-exposed-ports]`

[.description]
--
Set additional ports to be exposed when @QuarkusIntegration needs to launch the application in a container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTAINER_ADDITIONAL_EXPOSED_PORTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTAINER_ADDITIONAL_EXPOSED_PORTS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
